# stat-summoner

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  i.json  index.html  riot_games_match_data.json  search-index.js  settings.html  src-files.js  thingstoget.txt
.github/workflows/: deploy-docs.yml
search.desc/stat_summoner/: stat_summoner-desc-0-.js
src/: embed.rs  main.rs  models.rs  riot_api.rs  utils.rs
src/commands/: followgames.rs  lolstats.rs  mod.rs
src/law/: mod.rs  privacy_policy.rs  terms_of_service.rs
src/models/: constants.rs  data.rs  error.rs  mod.rs  modal.rs  region.rs  role.rs
src/module/: mod.rs
src/stat_summoner/: embed.rs.html  main.rs.html  models.rs.html  riot_api.rs.html  utils.rs.html
stat_summoner/: all.html  fn.__loader.html  fn.__runner.html  fn.__shuttle_main.html  fn.main.html  index.html  sidebar-items.js
stat_summoner/commands/: index.html  sidebar-items.js
stat_summoner/embed/: fn.create_and_send_embed.html  fn.create_embed.html  fn.create_embed_error.html  fn.create_embed_sucess.html  fn.extract_champions_info.html  fn.extract_match_info.html  fn.extract_rank_info.html  fn.schedule_message_deletion.html  index.html  sidebar-items.js
stat_summoner/law/: index.html  sidebar-items.js
stat_summoner/models/: constant.QUEUE_ID_MAP.html  enum.Region.html  index.html  sidebar-items.js  struct.Data.html  struct.LolStatsModal.html  type.Error.html
stat_summoner/module/: index.html  sidebar-items.js
stat_summoner/riot_api/: fn.get_champions.html  fn.get_matchs_id.html  fn.get_matchs_info.html  fn.get_puuid.html  fn.get_rank_info.html  fn.get_summoner_id.html  fn.open_dd_json.html  index.html  sidebar-items.js
stat_summoner/utils/: fn.get_champion_id.html  (+10 more)
(+172 files in other folders)
