[package]
name = "stat-summoner"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["shvvkz"]

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.47.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.47.0"
tracing = "0.1.37"
tokio = {version = "1.26.0", features = ["full"]}
reqwest = {version = "0.12.7", features = ["json"]}
serde_json = "1.0.70"
chrono ={ version = "0.4.19", features = ["serde"] }
mongodb = "3.1.0"
serde = "1.0.130"
futures = "0.3.30"